--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,12 +1,26 @@
 {
     "manifest_version": 2,
     "name": "Watch Timer",
-    "version": "0.1",
+    "version": "1.0",
+    "description": "Youtube and Netflix time logging tool",
     "content_scripts": [{
         "matches": [
             "*://*.youtube.com/*",
             "*://*.netflix.com/*"
         ],
-        "js": ["content.js"]
-    }]
+        "js": ["jquery-3.5.1.slim.min.js", "content.js", "index.js"],
+        "run_at": "document_start"
+    }],
+    "icons": {
+        "16": "icon16.png",
+        "48": "icon48.png",
+        "128": "icon128.png"
+    },
+    "permissions": [
+        "storage"
+    ],
+    "browser_action": {
+        "default_icon": "icon16.png",
+        "default_popup": "index.html"
+    }
 }
